<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.PlayerFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Create Layout for the Player here -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground">

            <Button
                android:id="@+id/button_suffle"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorBackground"
                android:drawableStart="@drawable/ic_button_shuffle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button_loop_all"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorBackground"
                android:drawableStart="@drawable/ic_button_loop_all"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_play"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorBackground"
                android:drawableStart="@drawable/ic_button_play"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_suffle"
                app:layout_constraintStart_toEndOf="@+id/button_loop_all" />

            <Button
                android:id="@+id/button_next"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"

                android:background="@color/colorBackground"
                android:drawableStart="@drawable/ic_button_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_suffle"
                app:layout_constraintStart_toEndOf="@+id/button_play" />

            <Button
                android:id="@+id/button_previous"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_button_previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_play"
                app:layout_constraintStart_toEndOf="@+id/button_loop_all" />

            <Button
                android:id="@+id/button_arrow_reduce"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_arrow_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_options"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorBackground"
                android:drawableStart="@drawable/ic_button_options"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/player_placeholder"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/text_top_album_or_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/location_album_or_playlist"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/textview_top_type_album_or_playlist"/>

            <TextView
                android:id="@+id/text_top_name_album_or_playlist"
                android:textSize="@dimen/textview_top_name_album_or_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/title_album_or_music"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_top_album_or_playlist" />

            <TextView
                android:id="@+id/text_title_music"
                android:textSize="@dimen/textview_title_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_music"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/text_artist_name"
                android:textSize="@dimen/textview_name_artiste_and_album"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/name_artiste"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title_music" />

            <TextView
                android:id="@+id/text_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/separator"
                app:layout_constraintBottom_toBottomOf="@+id/text_artist_name"
                app:layout_constraintStart_toEndOf="@+id/text_artist_name" />

            <TextView
                android:id="@+id/text_album_name"
                android:textSize="@dimen/textview_name_artiste_and_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/title_album"
                app:layout_constraintBottom_toBottomOf="@+id/text_artist_name"
                app:layout_constraintStart_toEndOf="@+id/text_artist_name" />

            <Button
                android:id="@+id/button_like"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_button_not_liked"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <Button
                android:id="@+id/button_add_playlist"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_button_add_into_playlist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_like" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>
